--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.flyway.url=${UNIM_DB_URL}
+spring.flyway.user=${UNIM_DB_USER}
+spring.flyway.password=${UNIM_DB_PASSWORD}
+
+jwt.token.secret=${TOKEN_SECRET}
+jwt.token.expired=${TOKEN_EXPIRED}
