finished the authentication and registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,10 @@ spring.datasource.url=${UNIM_DB_URL}
 spring.datasource.username=${UNIM_DB_USER}
 spring.datasource.password=${UNIM_DB_PASSWORD}
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
-spring.flyway.url=${UNIM_DB_URL}
-spring.flyway.user=${UNIM_DB_USER}
-spring.flyway.password=${UNIM_DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+spring.jpa.properties.hibernate.default_schema=unimdb
 
 jwt.token.secret=${TOKEN_SECRET}
 jwt.token.expired=${TOKEN_EXPIRED}
