--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.unim</groupId>
     <artifactId>unim-apis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>unim-apis</name>
     <description>Demo project for Spring Boot</description>
     <properties>
