--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=5000
 spring.datasource.url=${UNIM_DB_URL}
 spring.datasource.username=${UNIM_DB_USER}
 spring.datasource.password=${UNIM_DB_PASSWORD}
